Bug 54344 - TABLE: Date Number Formatting ISO 8601 with wrong number recognition result, Day becomes Year, Day always 1
Summary: TABLE: Date Number Formatting ISO 8601 with wrong number recognition result, ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.0.0.1 target:4.1.0 target:3.6.5
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-01 09:16 UTC by Rainer Bielefeld Retired
Modified: 2012-12-21 13:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Document (11.30 KB, application/vnd.oasis.opendocument.text)
2012-09-01 11:50 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-09-01 09:16:43 UTC
Steps how to reproducible with "LibreOffice 3.6.1.2  German UI/Locale [Build-ID:  e29a214] on German WIN7 Home Premium (64bit) 

0. Launch LibO
1. New Writer Document From LibO start Center
2. Menu 'Tools -> Options -> Writer -> Table -> Input: All Number 
   recognition checked'
3. 'Tools -> Options -> Language settings -> Language -> Locale=German'
4. Draw Table 3x3
5. For A1 select Number Format TT.MM.JJJJ (=German for DD.MM.YYYY)
6. Type "31.12." into A1
   Result  as expected "31.12.2012"
7. For A2 select Number Format JJJJ-MM-TT (=German for YYYY-MM-DD)
8. Type "31.12." into A2
   Bug: "1931-12-01"

This problem persists in Master and will not be healed with new date acceptance pattern, as you can see in Attachment 66432 [details] for Bug 52240, what also shows the bug.

Modifying A1 to Numbr format JJJJ-MM-TT after input keeps correct date, so this problem is recognition related.

I will check appearance version of this bug later 

@Eike:
Although I think that this one is completely independent to date acceptance pattern, but I think you should know about this bug, because date recognition is affected.
Comment 1 Jochen 2012-09-01 11:06:15 UTC
@Rainer
First:
How do you "select Number Format"?
To select I set the cursor to the empty cell A1 and use "Table -> Number Format... -> Category "Date" -> Format "TT.MM.JJJ"
For Step 7 the same procedure - but choosing "JJJJ-MM-TT"

I have observed the following:
Doing step for step - as described by you - in both cells is shown 31.12.2012 after typing "31.12."

OS: Windows XP
Comment 2 Rainer Bielefeld Retired 2012-09-01 11:50:06 UTC
Created attachment 66439 [details]
Sample Document

I can't see any obvious proceeding in Jochen's proceeding, but
[Reproducible] with LibO 3.5.2.2 on Ubunut 12 64 Bit (VirtualBox)

With Server installation (own profile) of "LibreOffice  3.5.6.2  German UI/Locale [Build-ID: e0fbe70-5879838-a0745b0-0cd1158-638b327] on German WIN7 Home Premium (64bit) Nomber recognition or Cell formatting is broken, does not work
Also broken with 3.4.5, I will check that later.

Attached Sample shows my results from WIN 3.6.1


@Jochen:
Your OS? OS Languge? Locale (I think German)? Document Language? LibO Version? 

> in both cells is shown 31.12.2012

Then you are doing something wrong, it's not plausible that with number format setting "JJJJ-MM-TT" you get "31.12.2012". Or you struggle with an other bug
Comment 3 Jochen 2012-09-01 13:08:43 UTC
@Rainer
the theme is IMHO relativ relatively complex (OS, OS Languge, document language, LibO Version, formatting etc.). Misunderstandings are preprogrammed. Does it make sense to discuss per PM or ML (e.g. de-discuss-ML)?
Comment 4 Jochen 2012-09-15 15:53:16 UTC
(In reply to comment #2)
> Your OS? OS Languge? Locale (I think German)? Document Language? LibO Version? 

OS: Windows XP
OS Languge: German
Locale: German
Document Language: German
LibO Version: 3.6.0.4

Changed status to NEW
Comment 5 Not Assigned 2012-12-19 21:01:14 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3043bfc6248b15836903d6d34c0f8581eebf27e9&g=libreoffice-4-0

resolved fdo#54344 let date pattern match overrule incomplete format match


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Not Assigned 2012-12-19 21:01:31 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8041285b369e58df477b5e92df4bde68e96056a2

resolved fdo#54344 let date pattern match overrule incomplete format match



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2012-12-19 22:28:16 UTC
Change pending review for 3-6 as https://gerrit.libreoffice.org/1426
Comment 8 Not Assigned 2012-12-21 09:27:55 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c796f58d6ea3999268333f6cff687ee517882717&g=libreoffice-3-6

resolved fdo#54344 let date pattern match overrule incomplete format match


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.