resolved fdo#54344 let date pattern match overrule incomplete format match

(cherry picked from commit 8041285b369e58df477b5e92df4bde68e96056a2)

Conflicts:

	svl/source/numbers/zforfind.cxx

Change-Id: Ieeba328b1e2a1e0fdcd44ad7899da257f846a6b8
Reviewed-on: https://gerrit.libreoffice.org/1426
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>